finish code implementation of assignment 07.

--- a/workspace/assignments/07-backend-optimization/CMakeLists.txt
+++ b/workspace/assignments/07-backend-optimization/CMakeLists.txt
@@ -34,6 +34,7 @@ FIND_PACKAGE(Pangolin REQUIRED)
 ## Your package locations should be listed before other locations
 INCLUDE_DIRECTORIES(
     ./01-bal-g2o/include
+    ./02-direct-ba/include
     ${OPENCV_INCLUDE_DIR}
     ${EIGEN3_INCLUDE_DIR}
     ${SOPHUS_INCLUDE_DIR}
@@ -49,6 +50,8 @@ INCLUDE_DIRECTORIES(
 ## set(OUTPUT_EXECUTABLE_DIR ./bin)
 ## SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_EXECUTABLE_DIR})
 
+SET(G2O_LIBS g2o_csparse_extension g2o_stuff g2o_core g2o_types_sba cxsparse)
+
 ##
 ## 1. BAL G2O
 ##
@@ -61,7 +64,6 @@ TARGET_LINK_LIBRARIES(
 )
 
 ADD_EXECUTABLE(bal_g2o 01-bal-g2o/src/bal_g2o.cpp)
-SET(G2O_LIBS g2o_csparse_extension g2o_stuff g2o_core cxsparse)
 TARGET_LINK_LIBRARIES(
     bal_g2o
     ${BOOST_LIBS}
@@ -69,4 +71,32 @@ TARGET_LINK_LIBRARIES(
     ${SOPHUS_LIBS}
     ${G2O_LIBS}
     ${LIB_BAL_PROBLEM}
+)
+
+##
+## 2. Direct BA
+##
+ADD_EXECUTABLE(direct_ba 02-direct-ba/direct_ba.cpp)
+TARGET_LINK_LIBRARIES(
+    direct_ba
+    ${BOOST_LIBS}
+    ${OpenCV_LIBS}
+    ${EIGEN3_LIBS}
+    ${SOPHUS_LIBS}
+    ${G2O_LIBS}
+    ${Pangolin_LIBRARIES}
+)
+
+##
+## 2. Direct BA
+##
+ADD_EXECUTABLE(direct_ba_ref 03-ref/direct_ba.cpp)
+TARGET_LINK_LIBRARIES(
+    direct_ba_ref
+    ${BOOST_LIBS}
+    ${OpenCV_LIBS}
+    ${EIGEN3_LIBS}
+    ${SOPHUS_LIBS}
+    ${G2O_LIBS}
+    ${Pangolin_LIBRARIES}
 )
