--- a/workspace/assignments/12-imu-calibration/src/simulator/CMakeLists.txt
+++ b/workspace/assignments/12-imu-calibration/src/simulator/CMakeLists.txt
@@ -148,7 +148,8 @@ target_link_libraries(${PROJECT_NAME}_activity
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/node.cpp)
+add_executable(${PROJECT_NAME}_for_calibration_node src/calibration_node.cpp)
+add_executable(${PROJECT_NAME}_for_odom_comparison_node src/odom_comparison_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -161,7 +162,11 @@ add_executable(${PROJECT_NAME}_node src/node.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}_node
+target_link_libraries(${PROJECT_NAME}_for_calibration_node
+    ${catkin_LIBRARIES}
+    ${PROJECT_NAME}_activity
+)
+target_link_libraries(${PROJECT_NAME}_for_odom_comparison_node
     ${catkin_LIBRARIES}
     ${PROJECT_NAME}_activity
 )
@@ -182,7 +187,9 @@ target_link_libraries(${PROJECT_NAME}_node
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-install(TARGETS ${PROJECT_NAME}_node
+install(TARGETS 
+    ${PROJECT_NAME}_for_calibration_node
+    ${PROJECT_NAME}_for_odom_comparison_node
     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
