finish assignment 02, course 6 homework.

--- a/workspace/assignments/16-visual-frontend/CMakeLists.txt
+++ b/workspace/assignments/16-visual-frontend/CMakeLists.txt
@@ -1,9 +1,10 @@
-cmake_minimum_required(VERSION 3.10)
-project(Triangulate)
+cmake_minimum_required(VERSION 3.10.2)
+
+project(visual_frontend)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
 find_package(Eigen3 REQUIRED)
 
@@ -11,5 +12,4 @@ include_directories(
         ${EIGEN3_INCLUDE_DIR}
 )
 
-add_executable(estimate_depth triangulate.cpp)
-#target_link_libraries(estimate_depth  ${Sophus_LIBRARIES})
+add_executable(triangulate triangulate.cpp)
