--- a/workspace/assignments/16-visual-frontend/CMakeLists.txt
+++ b/workspace/assignments/16-visual-frontend/CMakeLists.txt
@@ -4,12 +4,30 @@ project(visual_frontend)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+################################################
+## dependencies ##
+################################################
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
+find_package(Boost REQUIRED COMPONENTS 
+    program_options
+)
 find_package(Eigen3 REQUIRED)
 
+###########
+## Build ##
+###########
+
+## Specify additional locations of header files
+## Your package locations should be listed before other locations
 include_directories(
-        ${EIGEN3_INCLUDE_DIR}
+    ${Boost_INCLUDE_DIRS}
+    ${EIGEN3_INCLUDE_DIR}
+    ${PROJECT_SOURCE_DIR}/include
 )
 
-add_executable(triangulate triangulate.cpp)
+add_executable(triangulate src/triangulate.cpp)
+target_link_libraries(
+    triangulate
+    ${Boost_LIBRARIES}
+)
